sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/SwitchStatementWithEmptyBody.sand
pub class SwitchStatementWithEmptyBody {
    foo() {
        (
            switch val {
                else {
                    
                }
            }
        )
    }
}